--- a/todos.yaml
+++ b/todos.yaml
@@ -1,9 +1,11 @@
 user:
-- "\u5B8C\u6210\u62A5\u544A"
-- "\u56DE\u590D\u90AE\u4EF6"
-- "\u51C6\u5907\u4F1A\u8BAE"
-- "\u6BCF\u5C0F\u65F6\u7AD9\u7ACB\u8FD0\u52A8"
-- "\u6BCF\u4E24\u5C0F\u65F6\u559D\u4E00\u676F\u6C34"
-- "\u6BCF\u5929\u665A\u4E0A10\u70B9\u524D\u7761\u89C9"
-- "\u6BCF\u5929\u65E9\u4E0A7\u70B9\u8D77\u5E8A"
-- "\u6BCF\u5929\u9605\u8BFB\u81F3\u5C1130\u5206\u949F"
+- 学习Python基础语法
+- 练习Python编程
+- 阅读Python官方文档
+- 学习Python的数据结构
+- 学习Python的面向对象编程
+- 学习Python的异常处理
+- 学习Python的模块和包
+- 学习Python的文件操作
+- 学习Python的正则表达式
+- 学习Python的网络编程
