--- a/todos.yaml
+++ b/todos.yaml
@@ -1,9 +1,21 @@
 user:
-- "\u5B8C\u6210\u62A5\u544A"
-- "\u56DE\u590D\u90AE\u4EF6"
-- "\u51C6\u5907\u4F1A\u8BAE"
-- "\u6BCF\u5C0F\u65F6\u7AD9\u7ACB\u8FD0\u52A8"
-- "\u6BCF\u4E24\u5C0F\u65F6\u559D\u4E00\u676F\u6C34"
-- "\u6BCF\u5929\u665A\u4E0A10\u70B9\u524D\u7761\u89C9"
-- "\u6BCF\u5929\u65E9\u4E0A7\u70B9\u8D77\u5E8A"
-- "\u6BCF\u5929\u9605\u8BFB\u81F3\u5C1130\u5206\u949F"
+- 完成报告
+- 回复邮件
+- 准备会议
+- 每小时站立运动
+- 每两小时喝一杯水
+- 每天晚上10点前睡觉
+- 每天早上7点起床
+- 每天阅读至少30分钟
+- content: 早点起来
+  name: 早起
+  place: 家
+  time: 明天早上
+- content: 去麦当劳买早点
+  name: 买早点
+  place: 麦当劳
+  time: 明天早上
+- content: 在8点前赶到上海迪士尼游玩
+  name: 游玩迪士尼
+  place: 上海迪士尼
+  time: 明天早上8点前
